--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "cordova-plugin-compat": "^1.0.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
-        "mx.ferreyra.callnumber":"^0.0.2",
+        "mx.ferreyra.callnumber": "~0.0.2",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
@@ -63,7 +63,8 @@
             "ionic-plugin-keyboard": {},
             "phonegap-plugin-barcodescanner": {},
             "cordova-clipboard": {},
-            "cordova-sms-plugin": {}
+            "cordova-sms-plugin": {},
+            "mx.ferreyra.callnumber": {}
         },
         "platforms": [
             "android",
